Backports from 1.4 branch, agreed with tokoe:   r1158741   Move the mysql_upgrade call to a place where we   have made sure that mysqld is up and running and accepts   connections. This will avoid mysql_upgrade to fail with the   FATAL ERROR message.

BUG: 241977
  r1159382 | tokoe | 2010-08-05 11:02:10 +0200 (Thu, 05 Aug 2010) | 5
  lines

  Do not use 'mysql_upgrade', it will call 'mysql_fix_privilege_tables'
  internally
  which prevents us from further logins. Only call 'mysqlcheck' instead,
  which
  does the checks we want to have.


svn path=/branches/akonadi/1.3/; revision=1164039